tests/generated/164_upper.out
Fatal error: Call to undefined method DtlIter::upper() in /home/rune/workspace/php-misc/php-dtl-iterator/tests/django-generated/164_upper.php on line 4